--- a/tsznav/static/css/help.css
+++ b/tsznav/static/css/help.css
@@ -126,10 +126,20 @@ h1 {
   overflow: hidden;
   position: absolute;
   top: 10px;
+  z-index: 2;
 }
 
 .grid-content .appimg img {
   width: 100%;
+}
+
+.grid-content .app_bg {
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  filter: blur(25px);
+  opacity: 0.1;
 }
 
 .grid-content .app_text {
