--- a/website/cattool/static/css/help.scss
+++ b/website/cattool/static/css/help.scss
@@ -88,6 +88,14 @@ h1{
         position: absolute;
         top: 10px;
     }
+    .app_bg{
+        width: 100%;
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        filter: blur(25px);
+        opacity: 0.2;
+    }
     .app_text{
         padding-left: 50px;
     }
