--- a/website/cattool/static/css/help.css
+++ b/website/cattool/static/css/help.css
@@ -136,3 +136,124 @@ h1 {
 .noscoll {
   height: 100%;
 }
+
+.gg_box {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  width: 260px;
+  height: 400px;
+  background-color: #fff;
+  border-radius: 16px;
+  padding: 20px;
+  box-shadow: 5px 5px 10px #dee1e7;
+}
+
+.gg_box.gg_open {
+  right: -300px;
+}
+
+.gg_box .gg_label {
+  position: absolute;
+  left: -40px;
+  width: 30px;
+  background-color: #fff;
+  padding: 16px 8px;
+  border-radius: 8px 0 0 8px;
+  cursor: pointer;
+  writing-mode: vertical-lr;
+  letter-spacing: 2px;
+  color: #88899d;
+  transition: ease all 0.5s;
+}
+
+.gg_box .gg_label:hover {
+  color: #583cf1;
+}
+
+.gg_box .gg_box_header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.gg_box .gg_box_header h2 {
+  font-size: 18px;
+}
+
+.gg_box .gg_box_header > span {
+  cursor: pointer;
+}
+
+.gg_box .gg_box_header > span i {
+  font-size: 18px;
+}
+
+.lastapp-item {
+  background-color: #fff;
+  padding: 10px;
+  background: #ecedf0;
+  overflow: hidden;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  color: #333;
+  transition: ease all 0.5s;
+  position: relative;
+}
+
+.lastapp-item:hover {
+  transform: scale(1.08);
+  box-shadow: 0 3px 10px #ccc;
+}
+
+.lastapp-item a {
+  color: #333;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.lastapp-item .grid-content_title {
+  font-size: 14px;
+  -webkit-line-clamp: 1;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.lastapp-item .desctext {
+  color: #868686;
+  font-size: 12px;
+  -webkit-line-clamp: 1;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.lastapp-item .appimg {
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  overflow: hidden;
+  position: absolute;
+  top: 10px;
+}
+
+.lastapp-item .appimg img {
+  width: 100%;
+}
+
+.lastapp-item .app_bg {
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  filter: blur(25px);
+  opacity: 0.05;
+}
+
+.lastapp-item .app_text {
+  padding-left: 50px;
+}
