--- a/website/tszcloud/static/css/index.css
+++ b/website/tszcloud/static/css/index.css
@@ -446,6 +446,11 @@ a {
   margin-top: 40px;
 }
 
+.tiyanbtn:hover {
+  background-color: #156fff;
+  width: 280px;
+}
+
 .t-footer {
   background-color: #f5f5f5;
   border-top: 1px solid #e7e7e7;
