--- a/website/cattool/static/css/help.css
+++ b/website/cattool/static/css/help.css
@@ -13,6 +13,8 @@ h1 {
 
 .title {
   margin-bottom: 20px;
+  font-size: 12px;
+  color: #979797;
 }
 
 .navheader {
@@ -45,17 +47,23 @@ h1 {
   height: 100%;
 }
 
+.el-tabs__item {
+  font-size: 15px;
+  font-weight: 600;
+}
+
 .grid-content {
   background-color: #fff;
   padding: 10px;
   background: #ecedf0;
-  box-shadow: 5px 5px 10px #a3b1c6, -5px -5px 10px white;
+  box-shadow: 5px 5px 10px #d6dde7, -5px -5px 10px white;
   overflow: hidden;
   margin-bottom: 20px;
   border-radius: 10px;
   color: #333;
   transition: ease all 0.5s;
   position: relative;
+  border: 1px solid #fff;
 }
 
 .grid-content:hover {
@@ -69,12 +77,14 @@ h1 {
 }
 
 .grid-content .grid-content_title {
-  font-size: 14px;
+  font-size: 15px;
   -webkit-line-clamp: 1;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-weight: 600;
+  margin-bottom: 3px;
 }
 
 .grid-content .desctext {
