--- a/website/cattool/static/css/common.scss
+++ b/website/cattool/static/css/common.scss
@@ -37,3 +37,17 @@ a{
 .mlr-10{
     margin: 0 10px;
 }
+.navbutton{
+    padding: 4px 10px 5px 6px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    border-radius: 4px;
+    font-size: 14px;
+    margin-right: 10px;
+    color: #787878;
+    transition: ease all 0.5s;
+    &:hover{
+        border: 1px solid #0077ff;
+        color: #0077ff;
+    }
+}
