--- a/website/cattool/static/css/help.css
+++ b/website/cattool/static/css/help.css
@@ -131,6 +131,7 @@ h1 {
 
 .navtab .el-tabs__item.is-active {
   color: #583cf1;
+  background-color: rgba(89, 61, 240, 0.2);
 }
 
 .navtab .el-tabs__active-bar {
@@ -264,4 +265,9 @@ h1 {
 
 .lastapp-item .app_text {
   padding-left: 50px;
+}
+
+.highlight {
+  color: red;
+  font-weight: bold;
 }
