--- a/website/cattool/static/css/common.scss
+++ b/website/cattool/static/css/common.scss
@@ -84,6 +84,25 @@ body {
     background: var(--card-bg)!important;
     border: 1px solid var(--border-color);
     box-shadow: var(--boxshadow)!important;
+    position: relative;
+    .delicon{
+        position: absolute;
+        right: 8px;
+        top: 0;
+        color: #ccc;
+        opacity: 0;
+        translate: all 0.5s ease ;
+        z-index: 2;
+        cursor: pointer;
+        &:hover{
+            color: red!important;
+        }
+    }
+    &:hover{
+        .delicon{
+            opacity: 1;
+        }    
+    }
 }
 /* 修改Element Plus组件样式 */
 .el-tabs__item {
@@ -99,4 +118,16 @@ body {
 }
 .sreachtext{
     color: var(--text-color)!important;
+}
+.linkselect{
+    background-color: #d9e4f0;
+    padding: 6px 20px;
+    cursor: pointer;
+    font-size: 15px ;
+    font-weight: 600;
+    transition: ease all 0.5s;
+    &:hover{
+        background-color: #4073ff;
+        color: #fff;
+    }
 }
